package Chapter16;

public class Main {
    public static void main(String[] args) {
        new LoginFrame("Mediator Sample");
    }
}
